--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,10 @@
 .title {
-    font-size: 40px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  letter-spacing: 5px;
+  font-size: 60px;
+  color: white;
+  text-shadow: 0 0 10px #fff, 0 0 350px #fff, 0 0 1px #fff, 0 0 1px #fff,
+    0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff;
 }
