--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: rgb(69, 93, 167) no-repeat;
+  background: linear-gradient(
+      90deg,
+      rgba(69, 93, 167, 1) 0%,
+      rgba(70, 61, 142, 1) 50%,
+      rgba(73, 33, 121, 1) 100%
+    )
+    no-repeat;
+  font-family: "Roboto", sans-serif;
+  min-height: 100vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
